--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.*", features = ["derive"] }
 regex = "*"
-simple-error = "0.2.3"
+simple-error = "0.2.*"
